# grapl-ipc-plugin

./: .gitignore  README.md
grapl-ipc-analyzer-plugin/: ipc_node.py  setup.py
grapl-ipc-generator-plugin/: Cargo.toml
grapl-ipc-generator-plugin/src/: lib.rs
