[package]
name = "grapl-ipc-generator-plugin"
version = "0.1.0"
authors = ["Insanitybit <insanitybit@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grapl-graph-descriptions = { version="*" }
derive-dynamic-node = "0.1.4"

uuid = { version = "0.7", features = ["serde", "v4"] }
