[package]
name = "grapl-ipc-generator-plugin"
version = "0.1.0"
authors = ["Insanitybit <insanitybit@gmail.com>"]
edition = "2018"

description = "A plugin that provides IPC primitives for Grapl"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
 
derive-dynamic-node = "0.1.4"

uuid = { version = "0.7", features = ["serde", "v4"] }
grapl-graph-descriptions = "0.1.8"
